@@ -1,6 +1,7 @@
 2009-01-25 Richard Dale <richard.j.dale@gmail.com>
 * When an item is marked for not needing garbage collection show the actual
 Ruby class in the debug logging
+* Fixed some bugs in the widgetgallery dialogwidgets examples
 
 2009-01-24 Richard Dale <richard.j.dale@gmail.com>
 * Fixed bugs in the widgetgallery 'Form Validators' option
